surrogates/HMS/error_chem_sens-15077036.err
***************************** WARNING *********************************************
You're loading very old software that is no longer supported.  This software will be removed from CCR
during the June 2024 downtime.  Please update your workflow to utilize CCR's latest software release
*****************************************************************************************
The following modules were not unloaded:
  (Use "module --force purge" to unload all):

  1) ccrenv   2) ccrsoft/legacy
***************************** WARNING *********************************************
You're loading very old software that is no longer supported.  This software will be removed from CCR
during the June 2024 downtime.  Please update your workflow to utilize CCR's latest software release
*****************************************************************************************
  File "HMSpredict.py", line 54
    QoI = predict(np.matmul(np.array([[0.043069417, 0.0086, E1, E257, E250, b249, Lv, v]]), max_cols[:-1, :-1]), sparse, T, Cs))
                                                                                                                               ^
SyntaxError: unmatched ')'
Traceback (most recent call last):
  File "driver.py", line 24, in <module>
    with open ('predict.txt', "r") as myoutfile:
IOError: [Errno 2] No such file or directory: 'predict.txt'

Error: cannot open results file "results.out" for evaluation 1
srun: error: cpn-q06-20: task 0: Exited with exit code 252
srun: launch/slurm: _step_signal: Terminating StepId=15077036.0
